syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.services.utility";
option java_outer_classname = "UtilityServiceImpl";

package Utility;

service UtilityService {

	rpc switchDevices (DevicesRequest) returns (DevicesResponse) {}; //unary RPC S

	rpc switchCameraOn (CameraRequest) returns (CameraResponse) {};//unary RPC S
	
	rpc printList(stream PrinterRequest) returns (stream PrinterResponse) {}; //bidirectional RPC S C
}

message DevicesRequest {
	bool devices = 1;
}

message DevicesResponse {
	bool devices = 1;
}

message CameraRequest {
	bool camera = 1;
}

message CameraResponse {
	bool camera = 1;
}

message PrinterRequest {
    string pList = 1;
}

message PrinterResponse {
    string pList = 1;
}